tests/baselines/reference/parserMemberAccessorDeclaration8.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration8.ts(2,12): error TS1434: Unexpected keyword or identifier.
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration8.ts(2,23): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration8.ts (2 errors) ====
    class C {
        static static get Foo() { }
               ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                          ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }